--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/core/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/core/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>de.unistuttgart.iste.sqa.mpw.framework</groupId>
 			<artifactId>core</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
