--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/ui/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/ui/pom.xml
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>de.unistuttgart.iste.sqa.mpw.framework</groupId>
 			<artifactId>utils</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>1.0.1</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
