--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 		<relativePath>./parent/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>root</artifactId>
 	<name>Hamster Simulator Root Project</name>
 	<packaging>pom</packaging>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 
 	<modules>
 		<module>parent</module>
