--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -2,7 +2,7 @@ name: CI with Maven / CMake
 
 on:
   push:
-    branches: [ 'master' ]
+    branches: [ 'master', 'feature/**' ]
   pull_request:
     branches: [ 'master' ]
 
