--- a/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
+++ b/bundles/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator/pom.xml
@@ -95,6 +95,21 @@
                         <artifactId>commons-cli</artifactId>
                         <version>1.4</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.platform</groupId>
+                        <artifactId>org.eclipse.core.runtime</artifactId>
+                        <version>${eclipse.core.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.platform</groupId>
+                        <artifactId>org.eclipse.equinox.common</artifactId>
+                        <version>${equinox.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.emf</groupId>
+                        <artifactId>org.eclipse.emf.ecore</artifactId>
+                        <version>${xtext.version}</version>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
