--- a/.github/workflows/workflow-build.yaml
+++ b/.github/workflows/workflow-build.yaml
@@ -2,6 +2,11 @@ name: Java/C++ Build
 
 on:
   workflow_call:
+    secrets:
+      MAVEN_REPO_USER:
+        required: true
+      MAVEN_REPO_PASS:
+        required: true
 
 env:
   CPP_MODULE_BASE_NAME: "cpp-simulator"
