--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/core/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/core/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.3-SNAPSHOT</version>
+		<version>1.0.3</version>
 		<relativePath>../parent</relativePath>
 	</parent>
 
