--- a/releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent/pom.xml
+++ b/releng/de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent/pom.xml
@@ -3,7 +3,7 @@
     
     <groupId>de.unistuttgart.iste.sqa.mpw.modeling</groupId>
     <artifactId>de.unistuttgart.iste.sqa.mpw.modeling.hamstersimulator.parent</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Hamstersimulator Parent</name>
