--- a/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/parent/pom.xml
+++ b/simulators/de.unistuttgart.iste.sqa.mpw.hamstersimulator.java/parent/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.unistuttgart.iste.sqa.mpw.hamstersimulator</groupId>
 	<artifactId>parent</artifactId>
-	<version>1.0.3</version>
+	<version>1.0.4-SNAPSHOT</version>
 		
 	<name>Hamster Simulator Java Maven Parent Project</name>
 	<packaging>pom</packaging>
